Vendor exclusion zone redaction, basic post-processing, and better abstraction of overall program control flow

--- a/settings.yaml
+++ b/settings.yaml
@@ -1,4 +1,6 @@
-# Configuration for algorithmically merging boxes
-max_angle_delta: 10.0  # Maximum angle deviation between boxes in degrees.
-max_vertical_offset: 0.25  # Maximum tolerable vertical offset as a percentage of vertical size.
+max_vertical_offset: 0.25  # Maximum tolerable vertical separation as a multiplier of vertical size.
 max_horizontal_separation: 2.0  # Maximum horizontal separation as a multiplier of box width.
+expected_annotations:
+  - AO
+  - TRANS
+  - LIVER
