List of Keywords

--- a/valid_annotation_keywords.yaml
+++ b/valid_annotation_keywords.yaml
@@ -1,6 +1,148 @@
 valid_annotation_keywords:
-  - AO
-  - LO
-  - TRANS
-  - LIVER
-  - INJ
+- A
+- AC
+- ADNEXA
+- Adnexa
+- AFI-Q1
+- AORTA
+- Aorta
+- AP
+- Art
+- AO
+- Ao
+- B
+- Bed
+- BD
+- BIF
+- Bladder
+- BODY
+- Body
+- BPD
+- BULB
+- C
+- CBD
+- CCA
+- CEPH
+- CHD
+- CIA
+- CI
+- cm
+- cm2
+- cm/s
+- D
+- Decub
+- Diameter
+- Dist
+- Distal
+- DISTL
+- ECA
+- ED
+- EDV
+- EIA
+- End
+- FL
+- GB
+- H
+- HC
+- Height
+- Hep
+- Hepatic
+- HUM
+- HT
+- ICA
+- INJ
+- INTRAHEP
+- Isthmus
+- IVC
+- KIDNEY
+- Kidney
+- kPa
+- Lat
+- L
+- LEFT
+- Left
+- Length
+- Lesion
+- LG
+- LIV
+- Livr
+- Liver
+- LIVER
+- LHV
+- LLD
+- LK
+- LL
+- LLL
+- LO
+- LONG
+- Long
+- Lower
+- LPV
+- LT
+- Lt
+- Lymph
+- M
+- mm
+- MHA
+- Mid
+- MID
+- MHV
+- ML
+- MPV
+- Neck
+- Nodule
+- Node
+- NONTENDER
+- OFD
+- ORIGIN
+- Other
+- OV
+- Ovary
+- Ov
+- Pancreas
+- PANCREAS
+- PANC
+- P
+- PELVIS
+- PLAC
+- Polyp
+- Prox
+- PSV
+- PS
+- Renal
+- RI
+- RIGHT
+- Right
+- RK
+- R
+- Rt
+- RT
+- SAG
+- Sag
+- Spleen
+- SPLEEN
+- Stone
+- SUBCOSTAL
+- SUPINE
+- Supine
+- SURFACE
+- TAIL
+- Thyroid
+- Thickness
+- TO
+- Trans
+- TRANS
+- TR
+- TRV
+- UB
+- UT
+- Uterus
+- Vel
+- Vert
+- VERT
+- WALL
+- Wall
+- w
+- W
+- Width
+- WID
