modified image sizes and boxes

--- a/vendor_inclusion_zones.yaml
+++ b/vendor_inclusion_zones.yaml
@@ -1,19 +1,50 @@
 # Rectangular regions where human written text is likely
 # [top left x, top left y, bottom right x, bottom right y]
 Philips:
-  - [0, 700, 870, 770]
-  - [100, 100, 400, 350]
-  - [580, 190, 780, 350]
+  - image_size: [1024, 768]
+    boxes: 
+      - [0, 700, 870, 770]
+      - [100, 100, 400, 350]
+      - [580, 190, 780, 350]
 Siemens:
-  - [0, 600, 500, 700]
+  - image_size: [1024, 768]
+    boxes:
+      - [0, 600, 500, 700]
 LOGIQ:
-  - [0, 800, 1000, 970]
-  - [1000, 0, 1350, 820]
-  - [0, 80, 130, 250]
-  - [0, 700, 990, 820]
+  - image_size: [1280, 960]
+    boxes:
+      - [350, 800, 800, 900]
+
+  - image_size: [960, 720]
+    boxes:
+      - [0, 600, 860, 720]
+      - [0, 100, 150, 200]
+      - [150, 225, 400, 325]
+      - [550, 300, 650, 400]
+
+  - image_size: [1552, 970]
+    boxes: 
+      - [0, 800, 1000, 970]
+
+  - image_size: [1456, 819]
+    boxes: 
+      - [0, 650, 1000, 819]
+      - [1000, 0, 1350, 819]
+
+  - image_size: [1092, 819]
+    boxes: 
+      - [120, 700, 990, 820]
+      - [0, 600, 120, 820]
+      - [0, 100, 150, 250]
 Orange:
-  - [0, 400, 640, 440]
+  - image_size: [640, 480]
+    boxes:
+      - [0, 400, 640, 440]
 Sequoia:
-  - [0, 0, 150, 150]
+  - image_size: [640, 480]
+    boxes:
+      - [0, 0, 150, 150]
 Unknown:
-  - [0, 800, 1200, 960] 
+  - image_size: [1280, 960]
+    boxes:
+      - [0, 800, 1200, 960] 
