Updated excel generation and accuracies, and simplified the pipeline

--- a/imgFolder/LOGIQ/true_results.yaml
+++ b/imgFolder/LOGIQ/true_results.yaml
@@ -1,18 +1,18 @@
 01010.jpeg:
 - L
-- 4.03
+- '4.03'
 - cm
-- 2.64
+- '2.64'
 - cm
 01011.jpeg:
 - BPD
 - HC
 - OFD(HC)
-- 5.71
+- '5.71'
 - cm
 - 23w2d
 - '>97%'
-- 20.30
+- '20.30'
 - cm
 - 22w3d
 - 80.4%
@@ -40,7 +40,7 @@
 - RT
 - LT
 - FL
-- 3.79
+- '3.79'
 - cm
 - 21w6d
 - 63.9%
@@ -58,7 +58,7 @@
 01047.jpeg: []
 01049.jpeg:
 - AFI-Q1
-- 4.83
+- '4.83'
 - cm
 01050.jpeg:
 - CI
@@ -72,7 +72,7 @@
 - LONG
 01053.jpeg:
 - L
-- 3.04
+- '3.04'
 - cm
 01256.jpeg:
 - TRANS
@@ -86,19 +86,18 @@
 - SPLEEN
 - Spleen
 - Length
-- 7.1 
+- '7.1'
 - cm
 01512.jpeg:
 - Trans
 - Rt
-- Thyriod
+- Thyroid
 - Lower
 - Nodule
-- '1:'
-- 0.8
+- '1'
+- '0.8'
 - cm
-- 1.2
-- cm
+- '1.2'
 01512_1.tiff:
 - Long
 - Spleen
@@ -118,18 +117,18 @@
 - Kidney
 - Renal
 - Length
-- 6.8
+- '6.8'
 - cm
 011280.jpeg:
 - Trans
 - Rt
-- Thyriod
+- Thyroid
 - Lower
 - Nodule
-- '2:'
-- 1.0
+- '2'
+- '1.0'
 - cm
-- 1.3
+- '1.3'
 - cm
 011280_1.tiff:
 - Long
@@ -147,9 +146,9 @@
 - Upper
 - TRANS
 - L
-- 0.3
+- '0.3'
 - cm
-- 1.0
+- '1.0'
 - cm
 012560.jpeg:
 - Trans
@@ -175,17 +174,17 @@
 - Thyroid
 - Mid
 - AP
-- 2.0
+- '2.0'
 - cm
 - Trans
-- 2.9
+- '2.9'
 - cm
 013328_1.tiff:
 - Long
 - Aorta
 - Prox
 - AP
-- 0.8
+- '0.8'
 - cm
 013584.jpeg:
 - Trans
@@ -193,17 +192,17 @@
 - Thyroid
 - Mid
 - Nodule
-- '3:'
-- 1.1
+- '3'
+- '1.1'
 - cm
-- 1.3
+- '1.3'
 - cm
 013584_1.tiff:
 - Long
 - Aorta
 - Distal
 - AP
-- 0.7
+- '0.7'
 - cm
 013585.jpeg:
 - Trans
@@ -213,12 +212,12 @@
 - LONG
 - Lymph
 - Node
-- '1:'
-- 0.6
+- '1'
+- '0.6'
 - cm
-- 0.8
+- '0.8'
 - cm
-- 1.3
+- '1.3'
 - cm
 014608.jpeg:
 - Long
@@ -237,17 +236,17 @@
 016144.jpeg:
 - Trans
 - Isthmus
-- 2.6
+- '2.6'
 - mm
 016400.tiff:
 - Livr
 - Lesion
 - '1'
 - Length
-- 1.41
+- '1.41'
 - cm
 - Height
-- 1.38
+- '1.38'
 - cm
 - SAG
 - LIVER
@@ -256,12 +255,12 @@
 - Isthmus
 - LONG
 - Nodule
-- '1:'
-- 0.3
+- '1'
+- '0.3'
 - cm
-- 0.4
+- '0.4'
 - cm
-- 0.4
+- '0.4'
 - cm
 017168.jpeg:
 - Long
@@ -276,7 +275,7 @@
 - Lesion
 - '1'
 - Width
-- 1.59
+- '1.59'
 - cm
 - TRANS
 - LIVER
@@ -291,9 +290,9 @@
 - Thyroid
 - Mid
 - AP
-- 1.2
+- '1.2'
 - cm
-- 1.0
+- '1.0'
 - cm
 018448_1.tiff:
 - Long
@@ -308,12 +307,12 @@
 - Mid
 - LONG
 - Nodule
-- '1:'
-- 0.2
+- '1'
+- '0.2'
 - cm
-- 0.2
+- '0.2'
 - cm
-- 0.2
+- '0.2'
 - cm
 019472.jpeg:
 - Trans
@@ -331,47 +330,47 @@
 - Other
 - '1'
 - Trans
-- 1.6
+- '1.6'
 - cm
 - Long
-- 2.8
+- '2.8'
 - cm
 - '2'
 - AP
-- 0.3
+- '0.3'
 - cm
-- 1.2
+- '1.2'
 - cm
-- 1.4
+- '1.4'
 - cm
 - '3'
-- 0.3
+- '0.3'
 - cm
-- 1.5
+- '1.5'
 - cm
-- 2.7
+- '2.7'
 - cm
 - Art
 - Diameter
-- 3.4
+- '3.4'
 - mm
 39001.tiff:
 - Prox
 - AP
-- 0.7
+- '0.7'
 - cm
-- 1.3
+- '1.3'
 - cm
 - Mid
-- 2.2
+- '2.2'
 - cm
 - Trans
-- 2.8
+- '2.8'
 - cm
 - Distal
-- 4.1
+- '4.1'
 - cm
-- 5.1
+- '5.1'
 - cm
 39002.tiff:
 - Rt
@@ -379,168 +378,168 @@
 - Other
 - '1'
 - AP
-- 0.6
+- '0.6'
 - cm
 - Trans
-- 1.8
+- '1.8'
 - cm
 - Long
-- 3.5
+- '3.5'
 - cm
 - '2'
 - AP
-- 0.5
+- '0.5'
 - cm
-- 0.7
+- '0.7'
 - cm
-- 0.9
+- '0.9'
 - cm
 - '3'
-- 0.4
+- '0.4'
 - cm
-- 1.2
+- '1.2'
 - cm
-- 1.8
+- '1.8'
 - cm
 39005.tiff:
 - Rt
 - CIA
 - AP
-- 1.2
+- '1.2'
 - cm
 - Trans
-- 0.7
+- '0.7'
 - cm
 - EIA
-- 3.6
+- '3.6'
 - cm
 - Lt
-- 3.8
+- '3.8'
 - cm
-- 6.0
+- '6.0'
 - cm
-- 7.8
+- '7.8'
 - cm
 39006.tiff:
 - GB
 - Polyp
-- '1:'
+- '1'
 - '20.7'
 - mm
 - Stone
-- 3.9
+- '3.9'
 - cm
 - Other
 - AP
-- 6.4
+- '6.4'
 - cm
-- '2:'
-- 6.8
+- '2'
+- '6.8'
 - mm
-- 4.0
+- '4.0'
 - cm
 - Trans
-- 6.9
+- '6.9'
 - cm
-- '3:'
-- 8.3
+- '3'
+- '8.3'
 - mm
-- 0.3
+- '0.3'
 - cm
 - Long
-- 5.2
+- '5.2'
 - cm
 39008.tiff:
 - Bladder
 - Wall
 - Thickness
-- 4.5
+- '4.5'
 - mm
-- '1:'
-- 1.1
+- '1'
+- '1.1'
 - cm
-- '2:'
-- 2.3
+- '2'
+- '2.3'
 - cm
-- '3:'
-- 3.4
+- '3'
+- '3.4'
 - cm
 39012.tiff:
 - MHA
 - PS
-- 28
+- '28'
 - cm/s
 - ED
-- 8
+- '8'
 - cm/s
 - RI
 - '0.71'
 - Lt
 - Hep
 - Art
-- 48
+- '48'
 - cm/s
-- 35
+- '35'
 - cm/s
-- 35
+- '35'
 - cm/s
 - Rt
-- 42
+- '42'
 - cm/s
-- 19
+- '19'
 - cm/s
 - '0.53'
 - Mid
-- 33
+- '33'
 - cm/s
-- 19
+- '19'
 - cm/s
 - Hepatic
 - End
-- 9
+- '9'
 - cm/s
 39013.tiff:
 - Mid
-- 22
+- '22'
 - cm/s
-- 20
+- '20'
 - cm/s
 - Hepatic
 - End
-- 9
--cm/s
+- '9'
+- cm/s
 39025.tiff:
 - Ao
 - PS
-- 33
+- '33'
 - cm/s
 0110496.jpeg:
 - Trans
 - Isthmus
 - Nodule
-- '1:'
-- 0.4
+- '1'
+- '0.4'
 - cm
-- 0.8
+- '0.8'
 - cm
 0110496.tiff:
 - CHD
 - CHD
-- 0.6
+- '0.6'
 - mm
 0110497.jpeg:
 - Long
 - Lt
 - Thyroid
 - Mid
-- 3.4
-- mm
+- '3.4'
+- cm
 0110752.jpeg:
 - Long
 - Isthmus
 - Nodule
-- '1:'
-- 0.7
+- '1'
+- '0.7'
 - cm
 0111008.jpeg:
 - Long
@@ -550,12 +549,12 @@
 0111264.jpeg:
 - Trans
 - Lt
-- Thryoid
+- Thyroid
 - Lower
 - L
-- 0.4
+- '0.4'
 - cm
-- 0.5
+- '0.5'
 - cm
 0111776.jpeg:
 - Long
@@ -568,9 +567,9 @@
 - Thyroid
 - Mid
 - AP
-- 1.7
+- '1.7'
 - cm
-- 2.2
+- '2.2'
 - cm
 0112544.jpeg:
 - Trans
@@ -593,10 +592,10 @@
 - Thyroid
 - Mid
 - Nodule
-- '1:'
-- 0.9
+- '1'
+- '0.9'
 - cm
-- 1.9
+- '1.9'
 - cm
 0113568.tiff:
 - Long
